--- a/components/app/deployment.yaml
+++ b/components/app/deployment.yaml
@@ -17,14 +17,14 @@ spec:
           envFrom:
             - configMapRef:
                 name: "app-config"
-            
+
           ports:
             - name: http
               containerPort: 80
               protocol: TCP
           volumeMounts:
             - name: data
-              mountPath: /data
+              mountPath: /config
       volumes:
         - name: data
           persistentVolumeClaim:
